error.txt
newDir/dir1/file1.c: In function ‘main’:
newDir/dir1/file1.c:5:23: error: expected ‘;’ before ‘return’
    5 |         printf("hehe")
      |                       ^
      |                       ;
    6 |         return 0;
      |         ~~~~~~         
newDir/dir1/file1.c:4:13: warning: unused variable ‘a’ [-Wunused-variable]
    4 |         int a[5];
      |             ^
